# truffle

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  eslint.config.js  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  tsconfig.base.json  tsconfig.json
.changeset/: README.md  config.json
crates/truffle/: Cargo.toml
crates/truffle-bench/: Cargo.toml
crates/truffle-bench/src/: harness.rs  main.rs  report.rs
crates/truffle-bench/src/workloads/: file_transfer.rs  mod.rs  request_reply.rs  synced_store.rs
crates/truffle-cli/: Cargo.toml
crates/truffle-cli-v2/: Cargo.toml
crates/truffle-cli-v2/src/: config.rs  output.rs  resolve.rs
crates/truffle-cli-v2/src/apps/: diagnostics.rs  messaging.rs  mod.rs
crates/truffle-cli-v2/src/apps/file_transfer/: download.rs  receive.rs  types.rs  upload.rs
crates/truffle-cli-v2/src/commands/: cp.rs  ls.rs  mod.rs  ping.rs  status.rs  up.rs
crates/truffle-cli-v2/src/daemon/: handler.rs  ipc.rs  mod.rs  pid.rs  protocol.rs  server.rs
crates/truffle-cli/src/: auto_update.rs  config.rs  exit_codes.rs  json_output.rs  main.rs  output.rs  resolve.rs  sidecar.rs  stream.rs  target.rs
crates/truffle-cli/src/apps/: diagnostics.rs  messaging.rs  mod.rs
crates/truffle-cli/src/apps/file_transfer/: download.rs  mod.rs  receive.rs  types.rs  upload.rs
crates/truffle-cli/src/commands/: chat.rs  completion.rs  cp.rs  doctor.rs  down.rs  expose.rs  http.rs  install_sidecar.rs  ls.rs  mod.rs  peers.rs  ping.rs  proxy.rs  recv.rs  send.rs  serve.rs  status.rs  tcp.rs  uninstall.rs  up.rs  update.rs  wait.rs  watch.rs  ws.rs
crates/truffle-cli/src/daemon/: client.rs  handler.rs  ipc.rs  mod.rs  pid.rs  protocol.rs  server.rs
crates/truffle-cli/src/tui/: app.rs  event.rs  mod.rs  onboarding.rs
crates/truffle-cli/src/tui/commands/: broadcast.rs  cp.rs  mod.rs  send.rs
crates/truffle-cli/src/tui/ui/: activity_feed.rs  autocomplete.rs  device_panel.rs  file_picker.rs  input_bar.rs  mod.rs  status_bar.rs  toast.rs  transfer_dialog.rs  welcome_box.rs
crates/truffle-cli/tests/: ipc_integration.rs
crates/truffle-core/: Cargo.toml  build.rs
crates/truffle-core-v2/: Cargo.toml
crates/truffle-core-v2/examples/: peer_test.rs  transport_peer_test.rs
crates/truffle-core-v2/src/: lib.rs  node.rs
crates/truffle-core-v2/src/network/: mod.rs
crates/truffle-core-v2/src/network/tailscale/: bridge.rs  header.rs  mod.rs  protocol.rs  provider.rs  sidecar.rs  tests.rs
crates/truffle-core-v2/src/session/: mod.rs  reconnect.rs  tests.rs
crates/truffle-core-v2/src/transport/: mod.rs  quic.rs  tcp.rs  tests.rs  udp.rs  websocket.rs
crates/truffle-core-v2/tests/: integration_network.rs  integration_transport.rs
crates/truffle-core/benches/: chunk_hash.rs  crdt_merge.rs  envelope.rs
crates/truffle-core/examples/: peer_test.rs  transport_peer_test.rs
crates/truffle-core/src/: identity.rs  integration.rs  lib.rs  node.rs  request_reply.rs  runtime.rs  util.rs
crates/truffle-core/src/bridge/: header.rs  manager.rs  mod.rs  protocol.rs  shim.rs
crates/truffle-core/src/crdt_doc/: backend.rs  mod.rs  sync.rs  tests.rs  types.rs
crates/truffle-core/src/envelope/: codec.rs  mod.rs
crates/truffle-core/src/file_transfer/: adapter.rs  hasher.rs  mod.rs  progress.rs  receiver.rs  resume.rs  sender.rs  types.rs
crates/truffle-core/src/http/: mod.rs  proxy.rs  push.rs  pwa.rs  router.rs  static_site.rs  ws_handler.rs
crates/truffle-core/src/mesh/: device.rs  election.rs  handler.rs  message_bus.rs  mod.rs  node.rs  routing.rs
crates/truffle-core/src/network/: mod.rs
crates/truffle-core/src/network/tailscale/: bridge.rs  header.rs  mod.rs  protocol.rs  provider.rs  sidecar.rs  tests.rs
crates/truffle-core/src/protocol/: codec.rs  envelope.rs  frame.rs  hostname.rs  message_types.rs  mod.rs  namespace.rs  types.rs
crates/truffle-core/src/proxy/: discovery.rs  mod.rs  types.rs
crates/truffle-core/src/reverse_proxy/: mod.rs
crates/truffle-core/src/services/: mod.rs
crates/truffle-core/src/session/: hello.rs  mod.rs  tests.rs
crates/truffle-core/src/store_sync/: adapter.rs  mod.rs
crates/truffle-core/src/synced_store/: backend.rs  mod.rs  sync.rs  tests.rs  types.rs
crates/truffle-core/src/tailscale/: mod.rs
crates/truffle-core/src/transport/: connection.rs  heartbeat.rs  mod.rs  quic.rs  quic_socket.rs  reconnect.rs  tcp.rs  tests.rs  udp.rs  websocket.rs
crates/truffle-core/src/types/: mod.rs
crates/truffle-core/tests/: http_integration.rs  integration_eager_identity.rs  integration_file_transfer.rs  integration_network.rs  integration_request_reply.rs  integration_synced_store.rs  integration_transport.rs  interop_fixtures.rs  mesh_integration.rs  sidecar_lifecycle.rs  transport_integration.rs
crates/truffle-core/tests/common/: mod.rs
crates/truffle-napi/: Cargo.toml  README.md  helpers.d.ts  helpers.js  index.d.ts  index.js  package-lock.json  package.json
crates/truffle-napi/npm/darwin-arm64/: README.md  package.json
crates/truffle-napi/npm/darwin-x64/: README.md  package.json
crates/truffle-napi/npm/linux-arm64-gnu/: README.md  package.json
crates/truffle-napi/npm/linux-x64-gnu/: README.md  package.json
crates/truffle-napi/npm/win32-x64-msvc/: README.md  package.json
crates/truffle-napi/src/: crdt_doc.rs  file_transfer.rs  lib.rs  mesh_node.rs  node.rs  peer.rs  proxy.rs  quic.rs  raw_socket.rs  store_sync.rs  subscription.rs  synced_store.rs  types.rs  udp_socket.rs
crates/truffle-sidecar/: Cargo.toml  build.rs  sidecar-checksums.json
crates/truffle-sidecar/src/: integrity.rs  lib.rs
crates/truffle-tauri-plugin/: Cargo.toml  build.rs
crates/truffle-tauri-plugin/guest-js/: index.ts
crates/truffle-tauri-plugin/permissions/: default.toml
crates/truffle-tauri-plugin/permissions/autogenerated/: reference.md
crates/truffle-tauri-plugin/permissions/schemas/: schema.json
crates/truffle-tauri-plugin/src/: commands.rs  events.rs  lib.rs  raw_transport.rs  types.rs
crates/truffle/src/: lib.rs
(+282 files in other folders)
