[workspace]
resolver = "2"
members = [
    "crates/truffle-core",
    "crates/truffle-cli",
    "crates/truffle-sidecar",
    "crates/truffle",
    "crates/truffle-napi",
    "crates/truffle-tauri-plugin",
    "crates/truffle-bench",
]

# ── Shared package metadata ──────────────────────────────────────────
[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/jamesyong-42/truffle"
rust-version = "1.88"

# ── Shared lints ─────────────────────────────────────────────────────
[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# Enable pedantic/nursery incrementally — uncomment when ready:
# pedantic = { level = "warn", priority = -1 }
# nursery = { level = "warn", priority = -1 }
# module_name_repetitions = "allow"
# must_use_candidate = "allow"
# missing_errors_doc = "allow"
# missing_panics_doc = "allow"

# ── Centralised dependency versions ──────────────────────────────────
[workspace.dependencies]
# Async runtime & utilities
tokio = { version = "1" }
tokio-tungstenite = "0.29"
futures = "0.3"
futures-util = { version = "0.3", features = ["sink"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto & hashing
sha2 = "0.11"
hex = "0.4"
blake3 = "1"
subtle = "2"
getrandom = "0.2"
base64 = "0.22"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.14"

# Networking
quinn = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

# Data structures & IDs
uuid = { version = "1", features = ["v4"] }
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"

# CRDT
loro = { version = "1", features = ["counter"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
ratatui-explorer = "0.3"

# File/archive utilities
flate2 = "1"
tar = "0.4"
zip = "8"
tempfile = "3"

# System / platform
dirs = "6"
hostname = "0.4"
open = "5"
libc = "0.2"

# Unicode
unicode-normalization = "0.1"
unicode-segmentation = "1"
unicode-width = "0.2"
deunicode = "1"

# Misc
toml = "1.1"

# NAPI
napi = { version = "3", features = ["async", "napi4", "tokio_rt", "serde-json"] }
napi-derive = "3"
napi-build = "2"

# Tauri
tauri = { version = "2", features = [] }
tauri-plugin = { version = "2", features = ["build"] }

# Build-only
ureq = "3"

# Internal crates
truffle-core = { version = "0.4.3", path = "crates/truffle-core" }
truffle-sidecar = { version = "0.4.3", path = "crates/truffle-sidecar" }

# Dev / test
# (tokio dev features are added per-crate via `features = [...]`)
dotenvy = "0.15"
criterion = { version = "0.5", features = ["html_reports"] }
hdrhistogram = "7"

# ── Optimise dependency compilation in dev builds ────────────────────
[profile.dev.package."*"]
opt-level = 2
