[package]
name = "truffle-bench"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "Real-network macro benchmarks for truffle-core (RFC 019 §10.2)"
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "truffle-bench"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
truffle-core = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "fs", "io-util", "sync", "net"] }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hdrhistogram.workspace = true
dotenvy.workspace = true
tempfile.workspace = true
uuid.workspace = true
sha2.workspace = true
chrono.workspace = true
