[package]
name = "truffle-cli-v2"
version = "0.3.0"
edition = "2021"
description = "CLI tool for Truffle mesh networking (v2 — Node API)"
license = "MIT"
repository = "https://github.com/jamesyong-42/truffle"
publish = false

[[bin]]
name = "truffle"
path = "src/main.rs"

[dependencies]
truffle-core-v2 = { path = "../truffle-core-v2" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "io-util", "io-std", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
hostname = "0.4"
sha2 = "0.10"
hex = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_Foundation",
] }

[dev-dependencies]
tempfile = "3"
