[package]
name = "truffle-cli"
version = "0.4.5" # x-release-please-version
edition.workspace = true
description = "CLI tool for Truffle mesh networking (Node API)"
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "truffle"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
truffle-core = { path = "../truffle-core" }
clap.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "net", "io-util", "io-std", "fs"] }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
dirs.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
hostname.workspace = true
sha2.workspace = true
hex.workspace = true
reqwest.workspace = true
flate2.workspace = true
tar.workspace = true
futures-util.workspace = true
tempfile.workspace = true
chrono.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true

# TUI
ratatui.workspace = true
crossterm.workspace = true
futures.workspace = true
open.workspace = true
ratatui-explorer.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_Foundation",
] }
zip.workspace = true
