[package]
name = "truffle-core"
version = "0.4.0" # x-release-please-version
edition = "2021"
description = "Truffle mesh networking core (clean architecture)"
license = "MIT"
repository = "https://github.com/jamesyong-42/truffle"

[lib]
name = "truffle_core"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "time", "fs", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
hex = "0.4"
getrandom = "0.2"
subtle = "2"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tokio-tungstenite = "0.28"
futures-util = { version = "0.3", features = ["sink"] }
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.13"
sha2 = "0.10"
# RFC 017: identity and namespacing
ulid = "1"
dirs = "5"
unicode-normalization = "0.1"
deunicode = "1"
blake3 = "1"
hostname = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
