[package]
name = "truffle-core"
version = "0.4.3" # x-release-please-version
edition.workspace = true
rust-version.workspace = true
description = "Truffle mesh networking core (clean architecture)"
license.workspace = true
repository.workspace = true

[lib]
name = "truffle_core"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "time", "fs", "process"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
hex.workspace = true
getrandom.workspace = true
subtle.workspace = true
uuid.workspace = true
thiserror.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
quinn.workspace = true
rustls.workspace = true
rcgen.workspace = true
sha2.workspace = true
# RFC 018: CRDT documents
loro.workspace = true
base64.workspace = true
# RFC 017: identity and namespacing
ulid.workspace = true
dirs.workspace = true
unicode-normalization.workspace = true
deunicode.workspace = true
blake3.workspace = true
hostname.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
tracing-subscriber.workspace = true
tempfile.workspace = true
