[package]
name = "truffle-napi"
version = "0.1.0"
edition = "2021"
description = "NAPI-RS bindings for truffle-core (published to npm, not crates.io)"
license = "MIT"
repository = "https://github.com/jamesyong-42/truffle"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
truffle-core = { path = "../truffle-core" }
napi = { version = "3", features = ["async", "napi4", "tokio_rt", "serde-json"] }
napi-derive = "3"
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
getrandom = "0.2"
hex = "0.4"

[build-dependencies]
napi-build = "2"
