[package]
name = "truffle-napi"
version = "0.3.0"
edition.workspace = true
description = "NAPI-RS bindings for truffle-core (published to npm, not crates.io)"
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
truffle-core = { path = "../truffle-core" }
loro.workspace = true
napi.workspace = true
napi-derive.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true

[build-dependencies]
napi-build.workspace = true
