[package]
name = "truffle-sidecar"
version = "0.4.4" # x-release-please-version
edition.workspace = true
rust-version.workspace = true
description = "Auto-downloads the truffle mesh networking sidecar binary at build time"
license.workspace = true
repository.workspace = true
build = "build.rs"

[lints]
workspace = true

[build-dependencies]
ureq.workspace = true
flate2.workspace = true
tar.workspace = true
zip.workspace = true
