[package]
name = "truffle-sidecar"
version = "0.7.0" # x-release-please-version
edition.workspace = true
rust-version.workspace = true
description = "Auto-downloads the truffle mesh networking sidecar binary at build time"
license.workspace = true
repository.workspace = true
build = "build.rs"

[lints]
workspace = true

[build-dependencies]
ureq.workspace = true
# Integrity verification of the downloaded sidecar (see build.rs + src/integrity.rs).
sha2.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
# Needed by the `#[cfg(test)] mod integrity;` unit tests (shared with build.rs).
sha2.workspace = true
serde_json.workspace = true
