[package]
name = "truffle-tauri-plugin"
version = "0.2.2"
edition = "2021"
description = "Tauri v2 plugin for truffle-core mesh networking"
license = "MIT"
repository = "https://github.com/jamesyong-42/truffle"
publish = false
links = "truffle-tauri-plugin"

[lib]
name = "truffle_tauri_plugin"
path = "src/lib.rs"

[dependencies]
truffle-core = { path = "../truffle-core" }
loro = { version = "1", features = ["counter"] }
tauri = { version = "2", features = [] }
tauri-plugin = { version = "2", features = ["build"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
