[package]
name = "truffle-tauri-plugin"
version = "0.2.2"
edition.workspace = true
description = "Tauri v2 plugin for truffle-core mesh networking"
license.workspace = true
repository.workspace = true
publish = false
links = "truffle-tauri-plugin"

[lib]
name = "truffle_tauri_plugin"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
truffle-core = { path = "../truffle-core" }
loro.workspace = true
tauri.workspace = true
tauri-plugin.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true

[build-dependencies]
tauri-plugin.workspace = true
