[package]
name = "truffle"
version = "0.4.5" # x-release-please-version
edition.workspace = true
rust-version.workspace = true
description = "P2P mesh networking for your devices, built on Tailscale"
license.workspace = true
repository.workspace = true
keywords = ["mesh", "networking", "p2p", "tailscale"]
categories = ["network-programming"]

[lints]
workspace = true

[dependencies]
truffle-core = { version = "0.4.5", path = "../truffle-core" }       # x-release-please-version
truffle-sidecar = { version = "0.4.5", path = "../truffle-sidecar" } # x-release-please-version
